--- a/package.json
+++ b/package.json
@@ -4,12 +4,30 @@
   "description": "This is a learning project in which a todo application will be developed",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:app": "eslint .",
+    "lint:app:fix": "npm run lint:app -- --fix",
+    "lint:styles": "stylelint **/*.css",
+    "lint:styles:fix": "npm run lint:styles -- --fix"
   },
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "prettier": "^2.6.2",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "stylelint": "^15.10.1",
+    "stylelint-order": "^6.0.3"
+  },
+  "lint-staged": {
+    "*.css": [
+      "stylelint --fix"
+    ],
+    "*.js": [
+      "eslint --fix"
+    ]
   }
 }
