[#20] set up bundler for the project

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "import/no-webpack-loader-syntax": "off"
+  }
 }
