--- a/package.json
+++ b/package.json
@@ -4,26 +4,46 @@
   "description": "This is a learning project in which a todo application will be developed",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve",
+    "build": "npm run build:prod",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
     "lint:app": "eslint .",
     "lint:app:fix": "npm run lint:app -- --fix",
-    "lint:styles": "stylelint **/*.css",
+    "lint:styles": "stylelint **/*.scss",
     "lint:styles:fix": "npm run lint:styles -- --fix"
   },
   "license": "ISC",
+  "overrides": {
+    "postcss": "8.4.4"
+  },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "css-loader": "^6.8.1",
     "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss-loader": "^7.3.3",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "stylelint": "^15.10.1",
-    "stylelint-order": "^6.0.3"
+    "stylelint-order": "^6.0.3",
+    "stylelint-scss": "^5.0.1",
+    "svg-sprite-html-webpack": "^2.4.1",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "lint-staged": {
-    "*.css": [
+    "*.scss": [
       "stylelint --fix"
     ],
     "*.js": [
