--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "import/no-webpack-loader-syntax": "off"
+    "import/no-webpack-loader-syntax": "off",
+    "import/prefer-default-export": "off"
   }
 }
